@@ -1,0 +1,10 @@
+<?php
+/** Kazakh (Қазақша)
+  *
+  * @package MediaWiki
+  * @subpackage Language
+  */
+
+$linkTrail = '/^([a-zа-яäçéğıïñöşüʺʹёәіңғүұқөһ“»]+)(.*)$/sD';
+
+?>
